# meeting_rooms_booking_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 5c1d0f115488_table_base.py  952d480d7a9e_table_room.py  bdc1d0a273d9_table_user.py  c1e271fa7ef1_table_booking.py  e3d9f06507e5_table_timeslot.py
app/: constants.py  main.py
app/api/v1/: admin.py  auth.py  bookings.py  rooms.py  slots.py
app/core/: dependencies.py  security.py  settings.py
app/data/: rooms.csv  timeslots.csv  users.csv
app/db/: database.py  init_db.py
app/models/: booking.py  room.py  timeslot.py  user.py
app/schemas/: booking.py  room.py  timeslot.py  user.py
tests/integration/: conftest.py  test_integration_admin.py  test_integration_auth.py  test_integration_bookings.py  test_integration_rooms.py  test_integration_slots.py
tests/unit/: conftest.py  test_admin.py  test_auth.py  test_bookings.py  test_rooms.py  test_slots.py
